src/test/ui/type-alias-enum-variants/incorrect-variant-form-through-Self-issue-58006.stderr
error[E0533]: expected unit struct/variant or constant, found tuple variant `<Self>::A`
  --> $DIR/incorrect-variant-form-through-Self-issue-58006.rs:8:13
   |
LL |             Self::A => (),
   |             ^^^^^^^

error: aborting due to previous error

